kubernetes/apps/security/authentik/app/service-lb.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/v1/service.json
apiVersion: v1
kind: Service
metadata:
  name: authentik-server-lb
  namespace: security
  labels:
    app.kubernetes.io/name: authentik
    app.kubernetes.io/component: server-lb
  annotations:
    io.cilium/lb-ipam-ips: "10.1.100.207"
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
  selector:
    app.kubernetes.io/name: authentik
    app.kubernetes.io/component: server
