kubernetes/apps/security/authentik/app/servicemonitor.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: authentik-metrics
  namespace: security
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: authentik
    app.kubernetes.io/name: authentik
spec:
  type: ClusterIP
  ports:
    - name: http-metrics
      port: 9300
      protocol: TCP
      targetPort: 9300
  selector:
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: authentik
    app.kubernetes.io/name: authentik
