kubernetes/apps/security/authentik/app/httproute-halfduplex.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik-server-halfduplex
  namespace: security
  annotations:
    external-dns.alpha.kubernetes.io/is-public: "true"
spec:
  parentRefs:
    - name: external-gateway
      namespace: network
      sectionName: https-halfduplex
    - name: internal-gateway
      namespace: network
      sectionName: https-halfduplex
  hostnames:
    - "sso.halfduplex.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: authentik-server
          port: 80
