kubernetes/apps/security/authentik/app/httproute-internal.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik-server-internal
  namespace: security
  annotations:
    external-dns.alpha.kubernetes.io/target: internal.56kbps.io
spec:
  parentRefs:
    - name: internal-gateway
      namespace: network
      sectionName: https
  hostnames:
    - "sso.56kbps.io"
    - "sso.halfduplex.io"
  rules:
    - backendRefs:
        - name: authentik-server
          port: 80
